fix(account): menu contextuel out of bounds

--- a/src/css/my-account.css
+++ b/src/css/my-account.css
@@ -50,7 +50,7 @@
 #myAccountBody {
   height: calc(100vh - 100px);
   display: grid;
-  grid-template-rows: auto auto auto 1fr;
+  grid-template-rows: auto auto 1fr;
   align-items: baseline;
 }
 
